** ISSUE 	Race Condition due to refresh token rotation 	has been the largest pain in the ass 	although cool to show off feel as though it is completly redundant 	and excesive compared to other solutions. 	In all honesty nothing has made me want to jump off a bridge more than dealing with 	this pos

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -992,18 +992,24 @@ Link{
     white-space: nowrap;
 }
 
-.customerNameTxt {
-    flex: 1;
+.customerNameNAdd{
     display: flex;
+    justify-content: center;
     flex-direction: column;
+    height: fit-content;
     gap: 3px;
-    font-weight: 600;
-    font-size: 14px;
+}
+
+.customerNameTxt {
+    display: block;
+    font-weight: 420;
+    color: var(--orange);
+    font-size: 13px;
 }
 
 .customerAddressTxt {
     display: block;
-    font-size: 12px;
+    font-size: 13px;
     color: var(--text-muted);
     font-weight: 400;
 }
